<resources>
    <string name="app_name">FindMyCity</string>
    <string name="api_id">839261952976</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_About">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lvl0">Difficulté 1</string>
    <string name="lvl1">Difficulté 2</string>
    <string name="lvl2">Difficulté 3</string>
    <string name="options">Statistiques et à propos</string>
    <string name="modeNormal">Mode normal</string>
    <string name="modeGeocoding">Mode pays</string>
    <string name="modeChrono">Mode Chronomètre</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_100000000">Score : 100000000</string>
    <string name="exploits">EXPLOITS</string>
    <string name="modification_profil">Modification profil</string>
    <string name="scores">SCORES</string>
</resources>
